objects/Contact_Merge_Request__c.object
<CustomObject>
    <fields>
        <fullName>Master_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Merge Requests</relationshipLabel>
        <relationshipName>Contact_Merge_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Merged_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merged Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Merge Requests (Merged Contact)</relationshipLabel>
        <relationshipName>Contact_Merge_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_processed__c</fullName>
        <formula>Master_Contact__c =  Merged_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request processed</label>
        <type>Checkbox</type>
    </fields>
    <label>Contact Merge Request</label>
    <nameField>
        <displayFormat>CMR{00000}</displayFormat>
        <label>Contact Merge Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Merge Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>